--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      BRANCH_NAME: ${{ github.ref }}#refs/heads/
-      SHORT_COMMIT_HASH: ${{ github.sha }}::7
+    # env:
+    #   BRANCH_NAME: ${{ github.ref }}#refs/heads/
+    #   SHORT_COMMIT_HASH: ${{ github.sha }}::7
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -18,11 +18,21 @@ jobs:
       - name: Install
         run: npm install
 
-      - name: Extract branch name
-        run: echo "${BRANCH_NAME}"
+      - name: Set env
+        run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-7)" >> $GITHUB_ENV
+      - name: Test
+        run: echo $GITHUB_SHA_SHORT
+        
+      - name: Declare some variables
+        shell: bash
+        run: |
+          echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
+          echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> "$GITHUB_ENV"
       
-      - name: Extract short commit hash
-        run: echo "${SHORT_COMMIT_HASH}"
+      - name: Another step
+        run: |
+          echo "Branch: ${{ env.branch }}"
+          echo "Sha: ${{ env.sha_short }}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
