--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,6 @@ jobs:
       - name: Install
         run: npm install
 
-      - name: Set env
-        run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-7)" >> $GITHUB_ENV
-      - name: Test
-        run: echo $GITHUB_SHA_SHORT
-        
       - name: Declare some variables
         shell: bash
         run: |
@@ -44,4 +39,4 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_REPO }}:${{ env.BRANCH_NAME }}-${{ env.SHORT_COMMIT_HASH }}
+          tags: ${{ secrets.DOCKERHUB_REPO }}:${{ env.branch }}-${{ env.sha_short }}
